<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/salairephoto"
    tools:context=".java.controller.update">

    <TextView
        android:id="@+id/edit_sal_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/colorControlActivated"
        android:text="@string/edit_sal_title"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_sal_nom"
        android:layout_width="150dp"
        android:layout_height="37dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/add_sal_btn_prenom"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.424"
        app:layout_constraintStart_toEndOf="@+id/edit_sal_prenom"
        app:layout_constraintTop_toBottomOf="@+id/edit_sal_title" />

    <EditText
        android:id="@+id/edit_sal_prenom"
        android:layout_width="150dp"
        android:layout_height="37dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/add_sal_btn_nom"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_sal_title" />

    <EditText
        android:id="@+id/edit_sal_cin"
        android:layout_width="150dp"
        android:layout_height="37dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="36dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/add_sal_btn_cin"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_sal_prenom" />

    <EditText
        android:id="@+id/edit_sal_addresse"
        android:layout_width="150dp"
        android:layout_height="38dp"
        android:layout_marginTop="36dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/add_sal_btn_addresse"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.413"
        app:layout_constraintStart_toEndOf="@+id/edit_sal_cin"
        app:layout_constraintTop_toBottomOf="@+id/edit_sal_nom" />

    <EditText
        android:id="@+id/edit_sal_telephone"
        android:layout_width="150dp"
        android:layout_height="37dp"
        android:layout_marginTop="36dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/add_sal_btn_telephone"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        app:layout_constraintEnd_toStartOf="@+id/edit_sal_mail"
        app:layout_constraintHorizontal_bias="0.537"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_sal_cin" />

    <EditText
        android:id="@+id/edit_sal_mail"
        android:layout_width="150dp"
        android:layout_height="37dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/add_sal_btn_mail"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_sal_addresse" />

    <EditText
        android:id="@+id/edit_sal_date"
        android:layout_width="150dp"
        android:layout_height="37dp"
        android:layout_marginTop="36dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/add_sal_btn_date"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        app:layout_constraintEnd_toStartOf="@+id/edit_sal_departement"
        app:layout_constraintHorizontal_bias="0.537"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_sal_telephone" />

    <EditText
        android:id="@+id/edit_sal_departement"
        android:layout_width="150dp"
        android:layout_height="37dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/add_sal_btn_departement"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_sal_mail" />

    <EditText
        android:id="@+id/edit_sal_emploi"
        android:layout_width="150dp"
        android:layout_height="37dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="36dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/add_sal_btn_emploi"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        app:layout_constraintEnd_toStartOf="@+id/edit_sal_anciennete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_sal_date" />

    <EditText
        android:id="@+id/edit_sal_anciennete"
        android:layout_width="150dp"
        android:layout_height="37dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/add_sal_btn_anciennete"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_sal_departement" />

    <EditText
        android:id="@+id/edit_sal_salaire"
        android:layout_width="150dp"
        android:layout_height="37dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="36dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/add_sal_btn_salaire"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_sal_emploi" />

    <Button
        android:id="@+id/edit_sal_btn_exit"
        android:layout_width="409dp"
        android:layout_height="51dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/edit_sal_btn_exit"
        android:textColorHint="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_sal_btn_infos" />

    <Button
        android:id="@+id/edit_sal_btn_infos"
        android:layout_width="409dp"
        android:layout_height="51dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/holo_orange_light"
        android:text="@string/edit_sal_btn_infos"
        android:textColorHint="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_sal_btn_add" />

    <Button
        android:id="@+id/edit_sal_btn_add"
        android:layout_width="409dp"
        android:layout_height="52dp"
        android:layout_marginTop="44dp"
        android:background="@color/colorAccent"
        android:text="@string/edit_sal_btn_add"
        android:textColorHint="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_sal_prime" />

    <EditText
        android:id="@+id/edit_sal_prime"
        android:layout_width="150dp"
        android:layout_height="37dp"
        android:layout_marginTop="36dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/add_sal_prime"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.413"
        app:layout_constraintStart_toEndOf="@+id/edit_sal_salaire"
        app:layout_constraintTop_toBottomOf="@+id/edit_sal_anciennete" />
</androidx.constraintlayout.widget.ConstraintLayout>