<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".java.controller.accueil">

    <Button
        android:id="@+id/btn_list_salaries"
        android:layout_width="399dp"
        android:layout_height="62dp"
        android:text="@string/btn_list_salaries"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.639"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="269dp" />

    <Button
        android:id="@+id/btn_add_salarie"
        android:layout_width="391dp"
        android:layout_height="75dp"
        android:text="@string/btn_add_salarie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="367dp" />

    <Button
        android:id="@+id/btn_quitter"
        android:layout_width="399dp"
        android:layout_height="73dp"
        android:text="@string/btn_quitter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="465dp" />

</androidx.constraintlayout.widget.ConstraintLayout>